<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#DBD6D6"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="5dp"
        android:background="#A6C0F6"
        app:cardMaxElevation="2dp">

    <TextView
        android:id="@+id/detail_name_organizer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/detail_name_organizer" />

    <TextView
        android:id="@+id/detail_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:gravity="center"
        android:layout_marginTop="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/detail_date"/>

    <TextView
        android:id="@+id/detail_hour_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/detail_hour"/>

    <TextView
        android:id="@+id/detail_meeting_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal||bottom"
        android:gravity="center"
        android:padding="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/detail_meeting_room"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="5dp"
        android:background="#A6C0F6"
        app:cardMaxElevation="2dp">

    <TextView
        android:id="@+id/detail_participant_1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingTop="15dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/detail_participant_1"/>

    <TextView
        android:id="@+id/detail_participant_2_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/detail_participant_2"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="5dp"
        android:background="#A6C0F6"
        app:cardMaxElevation="2dp">

    <TextView
        android:id="@+id/detail_description_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:paddingBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/detail_description_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/detail_description_2"/>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/detail_exit_btn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="bottom||center"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_check_validate_bleu_24dp"
        android:contentDescription="@string/detail_description_button" />

</LinearLayout>